Standardise all shutdown_timer, shutdown_timeout, timeout attributes as 'autostop_timer'

--- a/share/locale/am.json
+++ b/share/locale/am.json
@@ -10,7 +10,7 @@
     "not_a_readable_file": "",
     "no_available_port": "",
     "other_page_loaded": "",
-    "close_on_timeout": "",
+    "close_on_autostop_timer": "",
     "closing_automatically": "",
     "timeout_download_still_running": "",
     "timeout_upload_still_running": "",
@@ -38,12 +38,12 @@
     "gui_choose_items": "",
     "gui_share_start_server": "",
     "gui_share_stop_server": "",
-    "gui_share_stop_server_shutdown_timeout": "",
-    "gui_share_stop_server_shutdown_timeout_tooltip": "",
+    "gui_share_stop_server_autostop_timer": "",
+    "gui_share_stop_server_autostop_timer_tooltip": "",
     "gui_receive_start_server": "",
     "gui_receive_stop_server": "",
-    "gui_receive_stop_server_shutdown_timeout": "",
-    "gui_receive_stop_server_shutdown_timeout_tooltip": "",
+    "gui_receive_stop_server_autostop_timer": "",
+    "gui_receive_stop_server_autostop_timer_tooltip": "",
     "gui_copy_url": "",
     "gui_copy_hidservauth": "",
     "gui_downloads": "",
@@ -105,8 +105,8 @@
     "gui_settings_button_save": "",
     "gui_settings_button_cancel": "ተወው",
     "gui_settings_button_help": "መመሪያ",
-    "gui_settings_shutdown_timeout_checkbox": "",
-    "gui_settings_shutdown_timeout": "",
+    "gui_settings_autostop_timer_checkbox": "",
+    "gui_settings_autostop_timer": "",
     "settings_error_unknown": "",
     "settings_error_automatic": "",
     "settings_error_socket_port": "",
@@ -132,8 +132,8 @@
     "gui_tor_connection_error_settings": "",
     "gui_tor_connection_canceled": "",
     "gui_tor_connection_lost": "",
-    "gui_server_started_after_timeout": "",
-    "gui_server_timeout_expired": "",
+    "gui_server_started_after_autostop_timer": "",
+    "gui_server_autostop_timer_expired": "",
     "share_via_onionshare": "",
     "gui_use_legacy_v2_onions_checkbox": "",
     "gui_save_private_key_checkbox": "",
