--- a/share/locale/ar.json
+++ b/share/locale/ar.json
@@ -10,7 +10,7 @@
     "not_a_readable_file": "{0:s} ملف غير قابل للقراءة.",
     "no_available_port": "لا يوجد منفذ متاح لتشغيل (onion service)",
     "other_page_loaded": "تم تحميل العنوان",
-    "close_on_timeout": "",
+    "close_on_autostop_timer": "",
     "closing_automatically": "توقف بسبب انتهاء التحميل",
     "timeout_download_still_running": "انتظار اكتمال التحميل",
     "large_filesize": "تحذير: ارسال مشاركة كبيرة قد يستغرق ساعات",
@@ -37,12 +37,12 @@
     "gui_choose_items": "إختر",
     "gui_share_start_server": "ابدأ المشاركة",
     "gui_share_stop_server": "أوقف المشاركة",
-    "gui_share_stop_server_shutdown_timeout": "",
-    "gui_share_stop_server_shutdown_timeout_tooltip": "",
+    "gui_share_stop_server_autostop_timer": "",
+    "gui_share_stop_server_autostop_timer_tooltip": "",
     "gui_receive_start_server": "",
     "gui_receive_stop_server": "",
-    "gui_receive_stop_server_shutdown_timeout": "",
-    "gui_receive_stop_server_shutdown_timeout_tooltip": "",
+    "gui_receive_stop_server_autostop_timer": "",
+    "gui_receive_stop_server_autostop_timer_tooltip": "",
     "gui_copy_url": "نسخ العنوان",
     "gui_copy_hidservauth": "",
     "gui_downloads": "",
@@ -104,8 +104,8 @@
     "gui_settings_button_save": "حفظ",
     "gui_settings_button_cancel": "إلغاء",
     "gui_settings_button_help": "مساعدة",
-    "gui_settings_shutdown_timeout_checkbox": "",
-    "gui_settings_shutdown_timeout": "إيقاف المشاركة يوم:",
+    "gui_settings_autostop_timer_checkbox": "",
+    "gui_settings_autostop_timer": "إيقاف المشاركة يوم:",
     "settings_error_unknown": "",
     "settings_error_automatic": "",
     "settings_error_socket_port": "لا يمكن الاتصال بوحدة تحكم تور في {}:{}.",
@@ -131,8 +131,8 @@
     "gui_tor_connection_error_settings": "",
     "gui_tor_connection_canceled": "",
     "gui_tor_connection_lost": "غير متصل بشبكة تور.",
-    "gui_server_started_after_timeout": "",
-    "gui_server_timeout_expired": "",
+    "gui_server_started_after_autostop_timer": "",
+    "gui_server_autostop_timer_expired": "",
     "share_via_onionshare": "",
     "gui_use_legacy_v2_onions_checkbox": "استخدم العناوين الموروثة",
     "gui_save_private_key_checkbox": "استخدم عنوانا ثابتا",
@@ -201,7 +201,7 @@
     "gui_all_modes_history": "السجل الزمني",
     "gui_all_modes_clear_history": "مسح الكل",
     "gui_share_mode_no_files": "لم ترسل أية ملفات بعد",
-    "gui_share_mode_timeout_waiting": "في انتظار الانتهاء من الإرسال",
+    "gui_share_mode_autostop_timer_waiting": "في انتظار الانتهاء من الإرسال",
     "gui_receive_mode_no_files": "لم تتلق أية ملفات بعد",
-    "gui_receive_mode_timeout_waiting": "في انتظار الانتهاء من الاستلام"
+    "gui_receive_mode_autostop_timer_waiting": "في انتظار الانتهاء من الاستلام"
 }
