--- a/share/locale/bg.json
+++ b/share/locale/bg.json
@@ -10,7 +10,7 @@
     "not_a_readable_file": "{0:s) не е четаем файл.",
     "no_available_port": "Свободен порт не бе намерен, за да може onion услугата да бъде стартирана",
     "other_page_loaded": "Адресът е зареден",
-    "close_on_timeout": "Спряно, защото автоматично спиращият таймер приключи",
+    "close_on_autostop_timer": "Спряно, защото автоматично спиращият таймер приключи",
     "closing_automatically": "Спряно, защото свалянето приключи",
     "timeout_download_still_running": "Изчакване на свалянето да приключи",
     "timeout_upload_still_running": "Изчакване ъплоудът да приключи",
@@ -38,12 +38,12 @@
     "gui_choose_items": "Изберете",
     "gui_share_start_server": "Започнете споделянето",
     "gui_share_stop_server": "Спрете споделянето",
-    "gui_share_stop_server_shutdown_timeout": "Спрете споделянето ({} остават)",
-    "gui_share_stop_server_shutdown_timeout_tooltip": "Автоматично спиращият таймерът терминира в {}",
+    "gui_share_stop_server_autostop_timer": "Спрете споделянето ({} остават)",
+    "gui_share_stop_server_autostop_timer_tooltip": "Автоматично спиращият таймерът терминира в {}",
     "gui_receive_start_server": "Стартирайте получаващ режим",
     "gui_receive_stop_server": "Спрете получаващия режим",
-    "gui_receive_stop_server_shutdown_timeout": "Спрете получаващия режим ({} остават)",
-    "gui_receive_stop_server_shutdown_timeout_tooltip": "Автоматично спиращият таймер спира в {}",
+    "gui_receive_stop_server_autostop_timer": "Спрете получаващия режим ({} остават)",
+    "gui_receive_stop_server_autostop_timer_tooltip": "Автоматично спиращият таймер спира в {}",
     "gui_copy_url": "Копирайте адрес",
     "gui_copy_hidservauth": "Копирайте HidServAuth",
     "gui_downloads": "Свалете история",
@@ -105,8 +105,8 @@
     "gui_settings_button_save": "Запазване",
     "gui_settings_button_cancel": "Отказ",
     "gui_settings_button_help": "Помощ",
-    "gui_settings_shutdown_timeout_checkbox": "Използвайте автоматично спиращия таймер",
-    "gui_settings_shutdown_timeout": "Спри дела на:",
+    "gui_settings_autostop_timer_checkbox": "Използвайте автоматично спиращия таймер",
+    "gui_settings_autostop_timer": "Спри дела на:",
     "settings_error_unknown": "Не мога да се свържа с Тор контролера, защото Вашите настройки не правят смисъл.",
     "settings_error_automatic": "Не мога да се свържа с Тор контролера. Стартиран ли е Тор браузерът във фонов режим (достъпен от torproject. org)?",
     "settings_error_socket_port": "Не мога да се свържа с Тор контролера в {}:{}.",
@@ -132,8 +132,8 @@
     "gui_tor_connection_error_settings": "Опитайте се да промените в настройките как OnionShare се свързва с Тор.",
     "gui_tor_connection_canceled": "Не може да се установи връзка с Тор.\n\nУверете се, че имате връзка с интернтет, след което отново отворете OnionShare и пренастройте връзката с Тор.",
     "gui_tor_connection_lost": "Връзката с Тор е прекъсната.",
-    "gui_server_started_after_timeout": "Автоматично спиращият таймер спря преди сървърът да стартира.\nМоля направете нов дял.",
-    "gui_server_timeout_expired": "Автоматично спиращият таймер спря.\nМоля актуализирайте за да започнете споделяне.",
+    "gui_server_started_after_autostop_timer": "Автоматично спиращият таймер спря преди сървърът да стартира.\nМоля направете нов дял.",
+    "gui_server_autostop_timer_expired": "Автоматично спиращият таймер спря.\nМоля актуализирайте за да започнете споделяне.",
     "share_via_onionshare": "Споделете го чрез OnionShare",
     "gui_use_legacy_v2_onions_checkbox": "Използвайте стари адреси",
     "gui_save_private_key_checkbox": "Използвайте постоянни адреси (стари)",
