--- a/share/locale/bn.json
+++ b/share/locale/bn.json
@@ -10,7 +10,7 @@
     "not_a_readable_file": "{0:s} ফাইলটি পড়া যাচ্ছে না।",
     "no_available_port": "Onion সার্ভিস চালু করার জন্য কোন পোর্ট পাওয়া যাচ্ছে না",
     "other_page_loaded": "এড্রেস লোড হয়েছে",
-    "close_on_timeout": "বন্ধ করা হয়েছে কারণ অটো-স্টপ টাইমার এর সময় শেষ",
+    "close_on_autostop_timer": "বন্ধ করা হয়েছে কারণ অটো-স্টপ টাইমার এর সময় শেষ",
     "closing_automatically": "ট্রান্সফার শেষ তাই থেমে যাওয়া হলো",
     "timeout_download_still_running": "",
     "timeout_upload_still_running": "",
@@ -38,12 +38,12 @@
     "gui_choose_items": "পছন্দ করুন",
     "gui_share_start_server": "শেয়ার করা শুরু করো",
     "gui_share_stop_server": "শেয়ার করা বন্ধ করো",
-    "gui_share_stop_server_shutdown_timeout": "শেয়ার করা বন্ধ করো ({} সেকেন্ড বাকি)",
-    "gui_share_stop_server_shutdown_timeout_tooltip": "টাইমার অনুযায়ী অটোমেটিক বন্ধ হবে {}-তে",
+    "gui_share_stop_server_autostop_timer": "শেয়ার করা বন্ধ করো ({} সেকেন্ড বাকি)",
+    "gui_share_stop_server_autostop_timer_tooltip": "টাইমার অনুযায়ী অটোমেটিক বন্ধ হবে {}-তে",
     "gui_receive_start_server": "প্রাপ্ত মোড আরম্ভ করুন",
     "gui_receive_stop_server": "প্রাপ্ত মোড বন্ধ করুন",
-    "gui_receive_stop_server_shutdown_timeout": "প্রাপ্ত মোড বন্ধ করুন ({}সে বাকি)",
-    "gui_receive_stop_server_shutdown_timeout_tooltip": "টাইমার অনুযায়ী অটোমেটিক বন্ধ হবে {}-তে",
+    "gui_receive_stop_server_autostop_timer": "প্রাপ্ত মোড বন্ধ করুন ({}সে বাকি)",
+    "gui_receive_stop_server_autostop_timer_tooltip": "টাইমার অনুযায়ী অটোমেটিক বন্ধ হবে {}-তে",
     "gui_copy_url": "এড্রেস কপি করো",
     "gui_copy_hidservauth": "HidServAuth কপি করো",
     "gui_downloads": "",
@@ -105,8 +105,8 @@
     "gui_settings_button_save": "সেভ",
     "gui_settings_button_cancel": "বাতিল",
     "gui_settings_button_help": "সাহায্য",
-    "gui_settings_shutdown_timeout_checkbox": "কানেকশন বন্ধ করার জন্য অটোমেটিক টাইমার ব্যবহার করো",
-    "gui_settings_shutdown_timeout": "শেয়ার বন্ধ করুন:",
+    "gui_settings_autostop_timer_checkbox": "কানেকশন বন্ধ করার জন্য অটোমেটিক টাইমার ব্যবহার করো",
+    "gui_settings_autostop_timer": "শেয়ার বন্ধ করুন:",
     "settings_error_unknown": "টর নিয়ন্ত্রকের সাথে সংযোগ করতে পারে না কারণ আপনার বিন্যাসনসমূহ বোধগম্য নয় ।",
     "settings_error_automatic": "টর নিয়ন্ত্রকের সাথে সংযোগ স্থাপন করা যায়নি । টর ব্রাউজার (torproject.org থেকে পাওয়া যায়) ব্রাকগ্রাউন চলমান?",
     "settings_error_socket_port": "{}: {} এ টর নিয়ন্ত্রকের সাথে সংযোগ করতে পারছি না ।",
@@ -132,8 +132,8 @@
     "gui_tor_connection_error_settings": "কিভাবে onionshare সেটিংসে টর নেটওয়ার্ক সংযোগ করে পরিবর্তন করতে চেষ্টা করুন ।",
     "gui_tor_connection_canceled": "টর-এ সংযোগ করা যায়নি ।\n\nআপনি ইন্টারনেটের সাথে সংযুক্ত আছেন কিনা তা নিশ্চিত করুন, তারপর onionshare পুনরায় খুলুন এবং টর এর সংযোগটি সেট আপ করুন ।",
     "gui_tor_connection_lost": "টর থেকে বিচ্ছিন্ন ।",
-    "gui_server_started_after_timeout": "সার্ভার শুরু হওয়ার আগেই অটো স্টপ টাইমার শেষ হয়ে যায় ।\n\nঅনুগ্রহ করে একটি  নতুন শেয়ার তৈরি করুন.",
-    "gui_server_timeout_expired": "অটো-স্টপ টাইমার ইতিমধ্যেই শেষ হয়ে গিয়েছে ।\n\nঅনুগ্রহ করে শেয়ারিং শুরু করতে এটি আপডেট করুন.",
+    "gui_server_started_after_autostop_timer": "সার্ভার শুরু হওয়ার আগেই অটো স্টপ টাইমার শেষ হয়ে যায় ।\n\nঅনুগ্রহ করে একটি  নতুন শেয়ার তৈরি করুন.",
+    "gui_server_autostop_timer_expired": "অটো-স্টপ টাইমার ইতিমধ্যেই শেষ হয়ে গিয়েছে ।\n\nঅনুগ্রহ করে শেয়ারিং শুরু করতে এটি আপডেট করুন.",
     "share_via_onionshare": "এটি OnionShare",
     "gui_use_legacy_v2_onions_checkbox": "লিগ্যাসি ঠিকানাগুলি ব্যবহার করুন",
     "gui_save_private_key_checkbox": "একটি অবিরাম ঠিকানা ব্যবহার করুন",
@@ -210,7 +210,7 @@
     "gui_all_modes_progress_starting": "{0:সে}, %p% (গণনা করা হচ্ছে)",
     "gui_all_modes_progress_eta": "{0:সে}, ইটিএ: {1: সে}, %p%",
     "gui_share_mode_no_files": "এখনও কোন ফাইল পাঠানো হয়নি",
-    "gui_share_mode_timeout_waiting": "প্রেরণ শেষ করার জন্য অপেক্ষা করছে",
+    "gui_share_mode_autostop_timer_waiting": "প্রেরণ শেষ করার জন্য অপেক্ষা করছে",
     "gui_receive_mode_no_files": "কোন ফাইল এখনও প্রাপ্ত হয়নি",
-    "gui_receive_mode_timeout_waiting": "প্রাপ্তির শেষ পর্যন্ত অপেক্ষা করছে"
+    "gui_receive_mode_autostop_timer_waiting": "প্রাপ্তির শেষ পর্যন্ত অপেক্ষা করছে"
 }
