--- a/share/locale/el.json
+++ b/share/locale/el.json
@@ -10,7 +10,7 @@
     "not_a_readable_file": "Το {0:s} δεν είναι αναγνώσιμο αρχείο.",
     "no_available_port": "Δεν βρέθηκε διαθέσιμη θύρα για να ξεκινήσει η υπηρεσία onion",
     "other_page_loaded": "Η διεύθυνση φορτώθηκε",
-    "close_on_timeout": "Τερματίστηκε γιατί το χρονόμετρο τερματισμού έφτασε στο τέλος",
+    "close_on_autostop_timer": "Τερματίστηκε γιατί το χρονόμετρο τερματισμού έφτασε στο τέλος",
     "closing_automatically": "Τερματίστηκε επειδή η λήψη ολοκληρώθηκε",
     "timeout_download_still_running": "Αναμονή ολοκλήρωσης της λήψης",
     "large_filesize": "Προειδοποίηση: Η αποστολή μεγάλου όγκου δεδομένων μπορεί να διαρκέσει ώρες",
@@ -37,12 +37,12 @@
     "gui_choose_items": "Επιλογή",
     "gui_share_start_server": "Εκκίνηση μοιράσματος",
     "gui_share_stop_server": "Τερματισμός μοιράσματος",
-    "gui_share_stop_server_shutdown_timeout": "Τερματισμός μοιράσματος (απομένουν {}\")",
-    "gui_share_stop_server_shutdown_timeout_tooltip": "Το χρονόμετρο αυτόματου τερματισμού τελειώνει σε {}",
+    "gui_share_stop_server_autostop_timer": "Τερματισμός μοιράσματος (απομένουν {}\")",
+    "gui_share_stop_server_autostop_timer_tooltip": "Το χρονόμετρο αυτόματου τερματισμού τελειώνει σε {}",
     "gui_receive_start_server": "Εκκίνηση κατάστασης λήψης",
     "gui_receive_stop_server": "Τερματισμός κατάστασης λήψης",
-    "gui_receive_stop_server_shutdown_timeout": "Τερματισμός κατάστασης λήψης (υπολοίπονται {}\")",
-    "gui_receive_stop_server_shutdown_timeout_tooltip": "Το χρονόμετρο αυτόματου τερματισμού τελειώνει σε {}",
+    "gui_receive_stop_server_autostop_timer": "Τερματισμός κατάστασης λήψης (υπολοίπονται {}\")",
+    "gui_receive_stop_server_autostop_timer_tooltip": "Το χρονόμετρο αυτόματου τερματισμού τελειώνει σε {}",
     "gui_copy_url": "Αντιγραφή διεύθυνσης",
     "gui_copy_hidservauth": "Αντιγραφή HidServAuth",
     "gui_downloads": "Ιστορικό Λήψεων",
@@ -104,8 +104,8 @@
     "gui_settings_button_save": "Αποθήκευση",
     "gui_settings_button_cancel": "Ακύρωση",
     "gui_settings_button_help": "Βοήθεια",
-    "gui_settings_shutdown_timeout_checkbox": "Χρήση χρονομέτρου αυτόματου τερματισμού",
-    "gui_settings_shutdown_timeout": "Τερματισμός της κοινοποίησης στα:",
+    "gui_settings_autostop_timer_checkbox": "Χρήση χρονομέτρου αυτόματου τερματισμού",
+    "gui_settings_autostop_timer": "Τερματισμός της κοινοποίησης στα:",
     "settings_error_unknown": "Αδύνατη η σύνδεση του ελέγχου Tor, καθώς οι ρυθμίσεις σας δεν έχουν κανένα νόημα.",
     "settings_error_automatic": "Είναι αδύνατη η σύνδεση στον έλεγχο του Tor. Λειτουργεί ο Tor Browser (διαθέσιμος στο torproject.org) στο παρασκήνιο?",
     "settings_error_socket_port": "Αδύνατη η σύνδεση στον έλεγχο Tor στις {}:{}.",
@@ -131,8 +131,8 @@
     "gui_tor_connection_error_settings": "Προσπαθήστε να αλλάξετε τον τρόπο σύνδεσης του OnionShare,  με το δίκτυο Tor, από τις ρυθμίσεις.",
     "gui_tor_connection_canceled": "Δεν μπόρεσε να γίνει σύνδεση με Tor.\n\nΕλέγξτε ότι είστε συνδεδεμένοι στο Διαδίκτυο, επανεκινήστε το OnionShare και ρυθμίστε την σύνδεση με το Tor.",
     "gui_tor_connection_lost": "Εγινε αποσύνδεση απο το Tor.",
-    "gui_server_started_after_timeout": "Η λειτουργία auto-stop τερματίστηκε πριν την εκκίνηση διακομιστή.\nΠαρακαλώ κάντε εναν νέο διαμοιρασμό.",
-    "gui_server_timeout_expired": "Η λειτουργία auto-stop ήδη τερματίστηκε.\nΕνημερώστε την για να ξεκινήσετε τον διαμοιρασμό.",
+    "gui_server_started_after_autostop_timer": "Η λειτουργία auto-stop τερματίστηκε πριν την εκκίνηση διακομιστή.\nΠαρακαλώ κάντε εναν νέο διαμοιρασμό.",
+    "gui_server_autostop_timer_expired": "Η λειτουργία auto-stop ήδη τερματίστηκε.\nΕνημερώστε την για να ξεκινήσετε τον διαμοιρασμό.",
     "share_via_onionshare": "Κάντε το OnionShare",
     "gui_use_legacy_v2_onions_checkbox": "Χρηση \"παραδοσιακών\" διευθύνσεων",
     "gui_save_private_key_checkbox": "Χρήση μόνιμης διεύθυνσης",
@@ -208,9 +208,9 @@
     "gui_all_modes_progress_starting": "{0:s}, %p% (γίνεται υπολογισμός)",
     "gui_all_modes_progress_eta": "{0:s}, εκτίμηση: {1:s}, %p%",
     "gui_share_mode_no_files": "Δεν Στάλθηκαν Αρχεία Ακόμα",
-    "gui_share_mode_timeout_waiting": "Αναμένοντας την ολοκλήρωση αποστολής",
+    "gui_share_mode_autostop_timer_waiting": "Αναμένοντας την ολοκλήρωση αποστολής",
     "gui_receive_mode_no_files": "Δεν Εγινε Καμμία Λήψη Αρχείων Ακόμα",
-    "gui_receive_mode_timeout_waiting": "Αναμένοντας την ολοκλήρωση της λήψης",
+    "gui_receive_mode_autostop_timer_waiting": "Αναμένοντας την ολοκλήρωση της λήψης",
     "gui_settings_onion_label": "Ρυθμίσεις Onion",
     "gui_all_modes_transfer_canceled_range": "Ακυρώθηκε {} - {}",
     "gui_all_modes_transfer_canceled": "Ακυρώθηκε {}"
