--- a/share/locale/en.json
+++ b/share/locale/en.json
@@ -15,7 +15,7 @@
     "not_a_readable_file": "{0:s} is not a readable file.",
     "no_available_port": "Could not find an available port to start the onion service",
     "other_page_loaded": "Address loaded",
-    "close_on_timeout": "Stopped because auto-stop timer ran out",
+    "close_on_autostop_timer": "Stopped because auto-stop timer ran out",
     "closing_automatically": "Stopped because transfer is complete",
     "large_filesize": "Warning: Sending a large share could take hours",
     "help_local_only": "Don't use Tor (only for development)",
@@ -36,12 +36,12 @@
     "gui_choose_items": "Choose",
     "gui_share_start_server": "Start sharing",
     "gui_share_stop_server": "Stop sharing",
-    "gui_share_stop_server_shutdown_timeout": "Stop Sharing ({})",
-    "gui_stop_server_shutdown_timeout_tooltip": "Auto-stop timer ends at {}",
+    "gui_share_stop_server_autostop_timer": "Stop Sharing ({})",
+    "gui_stop_server_autostop_timer_tooltip": "Auto-stop timer ends at {}",
     "gui_start_server_startup_timer_tooltip": "Auto-start timer ends at {}",
     "gui_receive_start_server": "Start Receive Mode",
     "gui_receive_stop_server": "Stop Receive Mode",
-    "gui_receive_stop_server_shutdown_timeout": "Stop Receive Mode ({}s remaining)",
+    "gui_receive_stop_server_autostop_timer": "Stop Receive Mode ({}s remaining)",
     "gui_copy_url": "Copy Address",
     "gui_copy_hidservauth": "Copy HidServAuth",
     "gui_canceled": "Canceled",
@@ -100,8 +100,8 @@
     "gui_settings_button_save": "Save",
     "gui_settings_button_cancel": "Cancel",
     "gui_settings_button_help": "Help",
-    "gui_settings_shutdown_timeout_checkbox": "Use auto-stop timer",
-    "gui_settings_shutdown_timeout": "Stop the share at:",
+    "gui_settings_autostop_timer_checkbox": "Use auto-stop timer",
+    "gui_settings_autostop_timer": "Stop the share at:",
     "gui_settings_startup_timer_checkbox": "Use auto-start timer",
     "gui_settings_startup_timer": "Start the share at:",
     "settings_error_unknown": "Can't connect to Tor controller because your settings don't make sense.",
@@ -129,10 +129,10 @@
     "gui_tor_connection_error_settings": "Try changing how OnionShare connects to the Tor network in the settings.",
     "gui_tor_connection_canceled": "Could not connect to Tor.\n\nEnsure you are connected to the Internet, then re-open OnionShare and set up its connection to Tor.",
     "gui_tor_connection_lost": "Disconnected from Tor.",
-    "gui_server_started_after_timeout": "The auto-stop timer ran out before the server started. Please make a new share.",
-    "gui_server_timeout_expired": "The auto-stop timer already ran out. Please update it to start sharing.",
+    "gui_server_started_after_autostop_timer": "The auto-stop timer ran out before the server started. Please make a new share.",
+    "gui_server_autostop_timer_expired": "The auto-stop timer already ran out. Please update it to start sharing.",
     "gui_server_startup_timer_expired": "The scheduled time has already passed. Please update it to start sharing.",
-    "gui_timeout_cant_be_earlier_than_startup": "The auto-stop time can't be the same or earlier than the start-up time. Please update it to start sharing.",
+    "gui_autostop_timer_cant_be_earlier_than_startup": "The auto-stop time can't be the same or earlier than the start-up time. Please update it to start sharing.",
     "share_via_onionshare": "OnionShare it",
     "gui_connect_to_tor_for_onion_settings": "Connect to Tor to see onion service settings",
     "gui_use_legacy_v2_onions_checkbox": "Use legacy addresses",
@@ -192,9 +192,9 @@
     "gui_all_modes_progress_starting": "{0:s}, %p% (calculating)",
     "gui_all_modes_progress_eta": "{0:s}, ETA: {1:s}, %p%",
     "gui_share_mode_no_files": "No Files Sent Yet",
-    "gui_share_mode_timeout_waiting": "Waiting to finish sending",
+    "gui_share_mode_autostop_timer_waiting": "Waiting to finish sending",
     "gui_receive_mode_no_files": "No Files Received Yet",
-    "gui_receive_mode_timeout_waiting": "Waiting to finish receiving",
+    "gui_receive_mode_autostop_timer_waiting": "Waiting to finish receiving",
     "waiting_for_scheduled_time": "Waiting for the scheduled time before starting...",
     "days_first_letter": "d",
     "hours_first_letter": "h",
