--- a/share/locale/fa.json
+++ b/share/locale/fa.json
@@ -10,7 +10,7 @@
     "not_a_readable_file": "{0:s} قابل خواندن نمی باشد.",
     "no_available_port": "پورت قابل استفاده برای شروع سرویس onion پیدا نشد",
     "other_page_loaded": "آدرس بارگذاری شد",
-    "close_on_timeout": "متوقف شد چون تایمر توقف خودکار به پایان رسید",
+    "close_on_autostop_timer": "متوقف شد چون تایمر توقف خودکار به پایان رسید",
     "closing_automatically": "متوقف شد چون انتقال انجام شد",
     "timeout_download_still_running": "انتظار برای تکمیل دانلود",
     "large_filesize": "هشدار: یک اشتراک گذاری بزرگ ممکن است ساعت ها طول بکشد",
@@ -37,12 +37,12 @@
     "gui_choose_items": "انتخاب",
     "gui_share_start_server": "شروع اشتراک گذاری",
     "gui_share_stop_server": "توقف اشتراک گذاری",
-    "gui_share_stop_server_shutdown_timeout": "توقف اشتراک گذاری ({} ثانیه باقیمانده)",
-    "gui_share_stop_server_shutdown_timeout_tooltip": "تایمر توقف خودکار در {} متوقف می شود",
+    "gui_share_stop_server_autostop_timer": "توقف اشتراک گذاری ({} ثانیه باقیمانده)",
+    "gui_share_stop_server_autostop_timer_tooltip": "تایمر توقف خودکار در {} متوقف می شود",
     "gui_receive_start_server": "شروع حالت دریافت",
     "gui_receive_stop_server": "توقف حالت دریافت",
-    "gui_receive_stop_server_shutdown_timeout": "توقف حالت دریافت ({} ثانیه باقیمانده)",
-    "gui_receive_stop_server_shutdown_timeout_tooltip": "تایمر توقف خودکار در {} به پایان می رسد",
+    "gui_receive_stop_server_autostop_timer": "توقف حالت دریافت ({} ثانیه باقیمانده)",
+    "gui_receive_stop_server_autostop_timer_tooltip": "تایمر توقف خودکار در {} به پایان می رسد",
     "gui_copy_url": "کپی آدرس",
     "gui_copy_hidservauth": "کپی HidServAuth",
     "gui_downloads": "دانلود تاریخچه",
@@ -104,8 +104,8 @@
     "gui_settings_button_save": "ذخیره",
     "gui_settings_button_cancel": "لغو",
     "gui_settings_button_help": "راهنما",
-    "gui_settings_shutdown_timeout_checkbox": "استفاده از تایمر توقف خودکار",
-    "gui_settings_shutdown_timeout": "توقف اشتراک در:",
+    "gui_settings_autostop_timer_checkbox": "استفاده از تایمر توقف خودکار",
+    "gui_settings_autostop_timer": "توقف اشتراک در:",
     "settings_error_unknown": "ناتوانی در اتصال به کنترل کننده Tor بدلیل نامفهوم بودن تنظیمات.",
     "settings_error_automatic": "ناتوانی در اتصال به کنترل کننده Tor. آیا مرورگر Tor (در دسترس از طریق torproject.org) در پس زمینه در حال اجراست؟",
     "settings_error_socket_port": "ناتوانی در اتصال به کنترل کننده Tor در {}:{}.",
@@ -131,8 +131,8 @@
     "gui_tor_connection_error_settings": "تغییر نحوه اتصال OnionShare به شبکه Tor در تنظیمات.",
     "gui_tor_connection_canceled": "اتصال به Tor برقرار نشد.\n\nمطمئن شوید که به اینترنت متصل هستید، سپس OnionShare را دوباره باز کرده و اتصال آن را به Tor دوباره برقرار کنید.",
     "gui_tor_connection_lost": "اتصال با Tor قطع شده است.",
-    "gui_server_started_after_timeout": "تایمر توقف خودکار قبل از آغاز سرور به پایان رسید.\nلطفا یک اشتراک جدید درست کنید.",
-    "gui_server_timeout_expired": "تایمر توقف خودکار به پایان رسید.\nلطفا برای آغاز اشتراک گذاری آن را به روز رسانی کنید.",
+    "gui_server_started_after_autostop_timer": "تایمر توقف خودکار قبل از آغاز سرور به پایان رسید.\nلطفا یک اشتراک جدید درست کنید.",
+    "gui_server_autostop_timer_expired": "تایمر توقف خودکار به پایان رسید.\nلطفا برای آغاز اشتراک گذاری آن را به روز رسانی کنید.",
     "share_via_onionshare": "OnionShare کنید",
     "gui_use_legacy_v2_onions_checkbox": "استفاده از آدرس های بازمانده",
     "gui_save_private_key_checkbox": "استفاده از یک آدرس پایا",
@@ -208,9 +208,9 @@
     "gui_all_modes_progress_starting": "{0:s}, %p% (در حال محاسبه)",
     "gui_all_modes_progress_eta": "{0:s}، تخمین: {1:s}, %p%",
     "gui_share_mode_no_files": "هیچ فایلی هنوز ارسال نشده است",
-    "gui_share_mode_timeout_waiting": "انتظار برای به پایان رسیدن ارسال",
+    "gui_share_mode_autostop_timer_waiting": "انتظار برای به پایان رسیدن ارسال",
     "gui_receive_mode_no_files": "هیچ فایلی هنوز دریافت نشده است",
-    "gui_receive_mode_timeout_waiting": "انتظار برای به پایان رسیدن دریافت",
+    "gui_receive_mode_autostop_timer_waiting": "انتظار برای به پایان رسیدن دریافت",
     "gui_all_modes_transfer_canceled_range": "{} - {} لغو شد",
     "gui_all_modes_transfer_canceled": "{} لغو شد"
 }
