--- a/share/locale/fi.json
+++ b/share/locale/fi.json
@@ -28,19 +28,19 @@
     "give_this_url_receive_stealth": "Anna tämä osoite ja HidServAuth lähettäjälle:",
     "not_a_readable_file": "{0:s} ei ole luettava tiedosto.",
     "no_available_port": "Vapaata porttia onion palvelulle ei löydetty",
-    "close_on_timeout": "Pysäytetty koska auto-stop ajastin loppui",
-    "help_shutdown_timeout": "Lopeta jakaminen annetun sekunnin kuluttua",
+    "close_on_autostop_timer": "Pysäytetty koska auto-stop ajastin loppui",
+    "help_autostop_timer": "Lopeta jakaminen annetun sekunnin kuluttua",
     "help_stealth": "Käytä asiakasvaltuutusta (edistynyt)",
     "help_receive": "Vastaanota osia niiden lähettämisen sijaan",
     "help_config": "Mukautettu JSON-määritystiedoston sijainti (valinnainen)",
     "gui_add_files": "Lisää tiedostoja",
     "gui_add_folder": "Lisää kansio",
-    "gui_share_stop_server_shutdown_timeout": "Lopeta jakaminen({}s jäljellä)",
-    "gui_share_stop_server_shutdown_timeout_tooltip": "Auto-stop ajastin loppuu {} jälkeen",
+    "gui_share_stop_server_autostop_timer": "Lopeta jakaminen({}s jäljellä)",
+    "gui_share_stop_server_autostop_timer_tooltip": "Auto-stop ajastin loppuu {} jälkeen",
     "gui_receive_start_server": "Aloita vastaanotto tila",
     "gui_receive_stop_server": "Lopeta vastaanotto tila",
-    "gui_receive_stop_server_shutdown_timeout": "Lopeta vastaanotto tila ({}s jäljellä)",
-    "gui_receive_stop_server_shutdown_timeout_tooltip": "Auto-stop ajastin loppuu kello {}",
+    "gui_receive_stop_server_autostop_timer": "Lopeta vastaanotto tila ({}s jäljellä)",
+    "gui_receive_stop_server_autostop_timer_tooltip": "Auto-stop ajastin loppuu kello {}",
     "gui_copy_hidservauth": "Kopioi HidServAuth",
     "gui_copied_url_title": "Kopioi OnionShare osoite",
     "gui_copied_hidservauth_title": "HidServAuth kopioitu",
@@ -93,8 +93,8 @@
     "gui_settings_button_save": "Tallenna",
     "gui_settings_button_cancel": "Peruuttaa",
     "gui_settings_button_help": "Apua",
-    "gui_settings_shutdown_timeout_checkbox": "Käytä auto-stop ajastinta",
-    "gui_settings_shutdown_timeout": "Lopeta jakaminen kello:",
+    "gui_settings_autostop_timer_checkbox": "Käytä auto-stop ajastinta",
+    "gui_settings_autostop_timer": "Lopeta jakaminen kello:",
     "settings_error_unknown": "Ei voi muodostaa yhteyttä Tor-ohjaimeen, koska asetuksesi eivät ole järkeviä.",
     "settings_error_automatic": "Tor-ohjaimeen ei voitu muodostaa yhteyttä. Onko Tor Browser (saatavilla osoitteesta torproject.org) avoimena taustalla?",
     "settings_error_socket_port": "Ei voi muodostaa yhteyttä Tor-ohjaimeen: {}:{}.",
@@ -120,8 +120,8 @@
     "gui_tor_connection_error_settings": "Yritä muuttaa miten OnionShare yhdistää Tor-verkkoon asetuksista.",
     "gui_tor_connection_canceled": "Tor-yhteyden muodostus epäonnistui.\n\nVarmista että sinulla on toimiva internet yhteys, jonka jälkeen uudelleen avaa OnionShare ja sen Tor-yhteys.",
     "gui_tor_connection_lost": "Tor-yhteys katkaistu.",
-    "gui_server_started_after_timeout": "Auto-stop ajastin loppui ennen palvelimen käynnistymistä.\nLuo uusi jako.",
-    "gui_server_timeout_expired": "Auto-stop ajastin loppui jo.\nPäivitä se jaon aloittamiseksi.",
+    "gui_server_started_after_autostop_timer": "Auto-stop ajastin loppui ennen palvelimen käynnistymistä.\nLuo uusi jako.",
+    "gui_server_autostop_timer_expired": "Auto-stop ajastin loppui jo.\nPäivitä se jaon aloittamiseksi.",
     "share_via_onionshare": "OnionShare se",
     "gui_connect_to_tor_for_onion_settings": "Yhdistä Tor-verkkoon nähdäksesi onion palvelun asetukset",
     "gui_use_legacy_v2_onions_checkbox": "Käytä vanhoja osoitteita",
@@ -179,7 +179,7 @@
     "gui_all_modes_progress_starting": "{0:s}, %p% (lasketaan)",
     "gui_all_modes_progress_eta": "{0:s}, ETA: {1:s}, %p%",
     "gui_share_mode_no_files": "Yhtäkään tiedostoa ei ole lähetetty vielä",
-    "gui_share_mode_timeout_waiting": "Odotetaan lähettämisen valmistumista",
+    "gui_share_mode_autostop_timer_waiting": "Odotetaan lähettämisen valmistumista",
     "gui_receive_mode_no_files": "Yhtäkään tiedostoa ei ole vastaanotettu vielä",
-    "gui_receive_mode_timeout_waiting": "Odotetaan vastaanottamisen valmistumista"
+    "gui_receive_mode_autostop_timer_waiting": "Odotetaan vastaanottamisen valmistumista"
 }
