--- a/share/locale/ga.json
+++ b/share/locale/ga.json
@@ -10,7 +10,7 @@
     "not_a_readable_file": "Ní comhad inléite é {0:s}.",
     "no_available_port": "Níorbh fhéidir port a aimsiú chun an tseirbhís onion a thosú",
     "other_page_loaded": "Seoladh lódáilte",
-    "close_on_timeout": "Cuireadh stop leis toisc go bhfuil an t-amadóir caite",
+    "close_on_autostop_timer": "Cuireadh stop leis toisc go bhfuil an t-amadóir caite",
     "closing_automatically": "Cuireadh stop leis toisc go bhfuil an íoslódáil críochnaithe",
     "timeout_download_still_running": "Ag fanacht go gcríochnódh an íoslódáil",
     "large_filesize": "Rabhadh: D'fhéadfadh go dtógfadh sé tamall fada comhad mór a sheoladh",
@@ -37,12 +37,12 @@
     "gui_choose_items": "Roghnaigh",
     "gui_share_start_server": "Comhroinn",
     "gui_share_stop_server": "Stop ag comhroinnt",
-    "gui_share_stop_server_shutdown_timeout": "Stop ag Comhroinnt ({}s fágtha)",
-    "gui_share_stop_server_shutdown_timeout_tooltip": "Amadóir uathstoptha caite {}",
+    "gui_share_stop_server_autostop_timer": "Stop ag Comhroinnt ({}s fágtha)",
+    "gui_share_stop_server_autostop_timer_tooltip": "Amadóir uathstoptha caite {}",
     "gui_receive_start_server": "Tosaigh an Mód Glactha",
     "gui_receive_stop_server": "Stop an Mód Glactha",
-    "gui_receive_stop_server_shutdown_timeout": "Stop an Mód Glactha ({}s fágtha)",
-    "gui_receive_stop_server_shutdown_timeout_tooltip": "Amadóir uathstoptha caite {}",
+    "gui_receive_stop_server_autostop_timer": "Stop an Mód Glactha ({}s fágtha)",
+    "gui_receive_stop_server_autostop_timer_tooltip": "Amadóir uathstoptha caite {}",
     "gui_copy_url": "Cóipeáil an Seoladh",
     "gui_copy_hidservauth": "Cóipeáil HidServAuth",
     "gui_downloads": "Stair Íoslódála",
@@ -104,8 +104,8 @@
     "gui_settings_button_save": "Sábháil",
     "gui_settings_button_cancel": "Cealaigh",
     "gui_settings_button_help": "Cabhair",
-    "gui_settings_shutdown_timeout_checkbox": "Úsáid amadóir uathstoptha",
-    "gui_settings_shutdown_timeout": "Stop ag comhroinnt ag:",
+    "gui_settings_autostop_timer_checkbox": "Úsáid amadóir uathstoptha",
+    "gui_settings_autostop_timer": "Stop ag comhroinnt ag:",
     "settings_error_unknown": "Ní féidir ceangal a bhunú leis an rialaitheoir Tor toisc nach féidir linn ciall a bhaint as na socruithe.",
     "settings_error_automatic": "Níorbh fhéidir ceangal a bhunú leis an rialaitheoir Tor. An bhfuil Brabhsálaí Tor (ar fáil ó torproject.org) ag rith sa gcúlra?",
     "settings_error_socket_port": "Ní féidir ceangal a bhunú leis an rialaitheoir Tor ag {}:{}.",
@@ -131,8 +131,8 @@
     "gui_tor_connection_error_settings": "Bain triail as na socruithe líonra a athrú chun ceangal le líonra Tor ó OnionShare.",
     "gui_tor_connection_canceled": "Níorbh fhéidir ceangal a bhunú le Tor.\n\nDeimhnigh go bhfuil tú ceangailte leis an Idirlíon, ansin oscail OnionShare arís agus socraigh an ceangal le Tor.",
     "gui_tor_connection_lost": "Dícheangailte ó Tor.",
-    "gui_server_started_after_timeout": "Bhí an t-amadóir uathstoptha caite sular thosaigh an freastalaí.\nCaithfidh tú comhroinnt nua a chruthú.",
-    "gui_server_timeout_expired": "Tá an t-amadóir uathstoptha caite cheana.\nCaithfidh tú é a athshocrú sular féidir leat comhaid a chomhroinnt.",
+    "gui_server_started_after_autostop_timer": "Bhí an t-amadóir uathstoptha caite sular thosaigh an freastalaí.\nCaithfidh tú comhroinnt nua a chruthú.",
+    "gui_server_autostop_timer_expired": "Tá an t-amadóir uathstoptha caite cheana.\nCaithfidh tú é a athshocrú sular féidir leat comhaid a chomhroinnt.",
     "share_via_onionshare": "Comhroinn trí OnionShare é",
     "gui_use_legacy_v2_onions_checkbox": "Úsáid seoltaí sean-nóis",
     "gui_save_private_key_checkbox": "Úsáid seoladh seasmhach (seanleagan)",
