--- a/share/locale/id.json
+++ b/share/locale/id.json
@@ -10,7 +10,7 @@
     "not_a_readable_file": "{0:s} bukan berkas yang bisa dibaca.",
     "no_available_port": "Tidak dapat menemukan porta yang tersedia untuk memulai layanan onion",
     "other_page_loaded": "Alamat dimuat",
-    "close_on_timeout": "",
+    "close_on_autostop_timer": "",
     "closing_automatically": "Terhenti karena transfer telah tuntas",
     "timeout_download_still_running": "",
     "large_filesize": "Peringatan: Mengirim dalam jumlah besar dapat memakan waktu berjam-jam",
@@ -37,12 +37,12 @@
     "gui_choose_items": "Pilih",
     "gui_share_start_server": "Mulai berbagi",
     "gui_share_stop_server": "Berhenti berbagi",
-    "gui_share_stop_server_shutdown_timeout": "Berhenti Berbagi ({}d tersisa)",
-    "gui_share_stop_server_shutdown_timeout_tooltip": "",
+    "gui_share_stop_server_autostop_timer": "Berhenti Berbagi ({}d tersisa)",
+    "gui_share_stop_server_autostop_timer_tooltip": "",
     "gui_receive_start_server": "Mulai Mode Menerima",
     "gui_receive_stop_server": "Menghentikan Mode Menerima",
-    "gui_receive_stop_server_shutdown_timeout": "Menghentikan Mode Menerima ({}d tersisa)",
-    "gui_receive_stop_server_shutdown_timeout_tooltip": "",
+    "gui_receive_stop_server_autostop_timer": "Menghentikan Mode Menerima ({}d tersisa)",
+    "gui_receive_stop_server_autostop_timer_tooltip": "",
     "gui_copy_url": "Salin Alamat",
     "gui_copy_hidservauth": "Salin HidServAuth",
     "gui_downloads": "",
@@ -104,8 +104,8 @@
     "gui_settings_button_save": "Simpan",
     "gui_settings_button_cancel": "Batal",
     "gui_settings_button_help": "",
-    "gui_settings_shutdown_timeout_checkbox": "",
-    "gui_settings_shutdown_timeout": "",
+    "gui_settings_autostop_timer_checkbox": "",
+    "gui_settings_autostop_timer": "",
     "settings_error_unknown": "",
     "settings_error_automatic": "",
     "settings_error_socket_port": "",
@@ -131,8 +131,8 @@
     "gui_tor_connection_error_settings": "",
     "gui_tor_connection_canceled": "",
     "gui_tor_connection_lost": "",
-    "gui_server_started_after_timeout": "",
-    "gui_server_timeout_expired": "",
+    "gui_server_started_after_autostop_timer": "",
+    "gui_server_autostop_timer_expired": "",
     "share_via_onionshare": "",
     "gui_use_legacy_v2_onions_checkbox": "",
     "gui_save_private_key_checkbox": "",
