--- a/share/locale/pl.json
+++ b/share/locale/pl.json
@@ -10,7 +10,7 @@
     "not_a_readable_file": "{0:s} nie jest plikiem do odczytu.",
     "no_available_port": "Nie można znaleźć dostępnego portu aby włączyć usługę onion",
     "other_page_loaded": "Adres został wczytany",
-    "close_on_timeout": "Zatrzymano, gdyż upłynął czas",
+    "close_on_autostop_timer": "Zatrzymano, gdyż upłynął czas",
     "closing_automatically": "Zatrzymano, gdyż pobieranie zostało ukończone",
     "timeout_download_still_running": "Czekam na ukończenie pobierania",
     "large_filesize": "Uwaga: Wysyłanie dużego pliku może zająć kilka godzin",
@@ -37,12 +37,12 @@
     "gui_choose_items": "Wybierz",
     "gui_share_start_server": "Rozpocznij udostępnianie",
     "gui_share_stop_server": "Zatrzymaj udostępnianie",
-    "gui_share_stop_server_shutdown_timeout": "Zatrzymaj udostępnianie (zostało {}s)",
-    "gui_share_stop_server_shutdown_timeout_tooltip": "Czas upłynie za {}",
+    "gui_share_stop_server_autostop_timer": "Zatrzymaj udostępnianie (zostało {}s)",
+    "gui_share_stop_server_autostop_timer_tooltip": "Czas upłynie za {}",
     "gui_receive_start_server": "Rozpocznij tryb odbierania",
     "gui_receive_stop_server": "Zatrzymaj tryb odbierania",
-    "gui_receive_stop_server_shutdown_timeout": "Zatrzymaj tryb odbierania (pozostało {}s)",
-    "gui_receive_stop_server_shutdown_timeout_tooltip": "Czas upływa za {}",
+    "gui_receive_stop_server_autostop_timer": "Zatrzymaj tryb odbierania (pozostało {}s)",
+    "gui_receive_stop_server_autostop_timer_tooltip": "Czas upływa za {}",
     "gui_copy_url": "Kopiuj adres załącznika",
     "gui_copy_hidservauth": "Kopiuj HidServAuth",
     "gui_downloads": "Historia pobierania",
@@ -104,8 +104,8 @@
     "gui_settings_button_save": "Zapisz",
     "gui_settings_button_cancel": "Anuluj",
     "gui_settings_button_help": "Pomoc",
-    "gui_settings_shutdown_timeout_checkbox": "",
-    "gui_settings_shutdown_timeout": "",
+    "gui_settings_autostop_timer_checkbox": "",
+    "gui_settings_autostop_timer": "",
     "settings_error_unknown": "Nie można połączyć się z kontrolerem Tor, ponieważ Twoje ustawienia nie mają sensu.",
     "settings_error_automatic": "Nie można połączyć się z kontrolerem Tor. Czy Tor Browser (dostępny na torproject.org) działa w tle?",
     "settings_error_socket_port": "Nie można połączyć się z kontrolerem Tor pod adresem {}:{}.",
@@ -131,8 +131,8 @@
     "gui_tor_connection_error_settings": "",
     "gui_tor_connection_canceled": "",
     "gui_tor_connection_lost": "",
-    "gui_server_started_after_timeout": "",
-    "gui_server_timeout_expired": "",
+    "gui_server_started_after_autostop_timer": "",
+    "gui_server_autostop_timer_expired": "",
     "share_via_onionshare": "",
     "gui_use_legacy_v2_onions_checkbox": "",
     "gui_save_private_key_checkbox": "",
