--- a/share/locale/sv.json
+++ b/share/locale/sv.json
@@ -10,7 +10,7 @@
     "not_a_readable_file": "{0:s} är inte en läsbar fil.",
     "no_available_port": "Kunde inte hitta en ledig kort för att starta onion-tjänsten",
     "other_page_loaded": "Adress laddad",
-    "close_on_timeout": "Stoppad för att tiden för den automatiska stopp-tidtagaren löpte ut",
+    "close_on_autostop_timer": "Stoppad för att tiden för den automatiska stopp-tidtagaren löpte ut",
     "closing_automatically": "Stoppad för att hämtningen är klar",
     "timeout_download_still_running": "Väntar på att nedladdningen ska bli klar",
     "timeout_upload_still_running": "Väntar på att uppladdningen ska bli klar",
@@ -38,12 +38,12 @@
     "gui_choose_items": "Välj",
     "gui_share_start_server": "Börja dela",
     "gui_share_stop_server": "Avbryt delning",
-    "gui_share_stop_server_shutdown_timeout": "Avbryt Delning ({}s kvarstår)",
-    "gui_share_stop_server_shutdown_timeout_tooltip": "Automatiska stopp-tidtagaren avslutar vid {}",
+    "gui_share_stop_server_autostop_timer": "Avbryt Delning ({}s kvarstår)",
+    "gui_share_stop_server_autostop_timer_tooltip": "Automatiska stopp-tidtagaren avslutar vid {}",
     "gui_receive_start_server": "Starta mottagarläge",
     "gui_receive_stop_server": "Avsluta Mottagarläge",
-    "gui_receive_stop_server_shutdown_timeout": "Avsluta Mottagarläge ({}s kvarstår)",
-    "gui_receive_stop_server_shutdown_timeout_tooltip": "Automatiska stopp-tidtagaren avslutar vid {}",
+    "gui_receive_stop_server_autostop_timer": "Avsluta Mottagarläge ({}s kvarstår)",
+    "gui_receive_stop_server_autostop_timer_tooltip": "Automatiska stopp-tidtagaren avslutar vid {}",
     "gui_copy_url": "Kopiera Adress",
     "gui_copy_hidservauth": "Kopiera HidServAuth",
     "gui_downloads": "Nedladdningshistorik",
@@ -105,8 +105,8 @@
     "gui_settings_button_save": "Spara",
     "gui_settings_button_cancel": "Avbryt",
     "gui_settings_button_help": "Hjälp",
-    "gui_settings_shutdown_timeout_checkbox": "Använd den automatiska stopp-tidtagaren",
-    "gui_settings_shutdown_timeout": "Stoppa delningen vid:",
+    "gui_settings_autostop_timer_checkbox": "Använd den automatiska stopp-tidtagaren",
+    "gui_settings_autostop_timer": "Stoppa delningen vid:",
     "settings_error_unknown": "Kan inte ansluta till Tor-regulatorn eftersom dina inställningar inte är vettiga.",
     "settings_error_automatic": "Kunde inte ansluta till Tor-regulatorn. Körs Tor Browser (tillgänglig från torproject.org) i bakgrunden?",
     "settings_error_socket_port": "Det går inte att ansluta till Tor-regulatorn på {}:{}.",
@@ -132,8 +132,8 @@
     "gui_tor_connection_error_settings": "Försök ändra hur OnionShare ansluter till Tor-nätverket i inställningarna.",
     "gui_tor_connection_canceled": "Kunde inte ansluta till Tor.\n\nSe till att du är ansluten till Internet, öppna sedan OnionShare och ställ in anslutningen till Tor.",
     "gui_tor_connection_lost": "Frånkopplad från Tor.",
-    "gui_server_started_after_timeout": "Tiden för den automatiska stopp-timern löpte ut innan servern startade.\nVänligen gör en ny delning.",
-    "gui_server_timeout_expired": "Tiden för den automatiska stopp-tidtagaren löpte redan ut.\nUppdatera den för att börja dela.",
+    "gui_server_started_after_autostop_timer": "Tiden för den automatiska stopp-timern löpte ut innan servern startade.\nVänligen gör en ny delning.",
+    "gui_server_autostop_timer_expired": "Tiden för den automatiska stopp-tidtagaren löpte redan ut.\nUppdatera den för att börja dela.",
     "share_via_onionshare": "Dela den med OnionShare",
     "gui_use_legacy_v2_onions_checkbox": "Använd äldre adresser",
     "gui_save_private_key_checkbox": "Använd en beständig adress",
@@ -207,9 +207,9 @@
     "gui_all_modes_progress_starting": "{0} %s% (beräkning)",
     "gui_all_modes_progress_eta": "{0:s}, ETA: {1:s}, %p%",
     "gui_share_mode_no_files": "Inga filer har skickats än",
-    "gui_share_mode_timeout_waiting": "Väntar på att avsluta sändningen",
+    "gui_share_mode_autostop_timer_waiting": "Väntar på att avsluta sändningen",
     "gui_receive_mode_no_files": "Inga filer har mottagits ännu",
-    "gui_receive_mode_timeout_waiting": "Väntar på att avsluta mottagande",
+    "gui_receive_mode_autostop_timer_waiting": "Väntar på att avsluta mottagande",
     "gui_all_modes_transfer_canceled_range": "Avbröt {} - {}",
     "gui_all_modes_transfer_canceled": "Avbröt {}",
     "gui_settings_onion_label": "Inställningar för Onion"
