--- a/share/locale/zh_Hans.json
+++ b/share/locale/zh_Hans.json
@@ -10,7 +10,7 @@
     "not_a_readable_file": "{0:s}不是可读文件.",
     "no_available_port": "找不到可用于开启onion服务的端口",
     "other_page_loaded": "地址已加载完成",
-    "close_on_timeout": "停止原因：自动停止计时器的时间已到",
+    "close_on_autostop_timer": "停止原因：自动停止计时器的时间已到",
     "closing_automatically": "终止 原因:传输已完成",
     "timeout_download_still_running": "",
     "large_filesize": "警告:分享大文件可能会用上数小时",
@@ -37,12 +37,12 @@
     "gui_choose_items": "选取",
     "gui_share_start_server": "开始分享",
     "gui_share_stop_server": "停止分享",
-    "gui_share_stop_server_shutdown_timeout": "停止分享（还剩{}秒）",
-    "gui_share_stop_server_shutdown_timeout_tooltip": "在{}自动停止",
+    "gui_share_stop_server_autostop_timer": "停止分享（还剩{}秒）",
+    "gui_share_stop_server_autostop_timer_tooltip": "在{}自动停止",
     "gui_receive_start_server": "开启接受模式",
     "gui_receive_stop_server": "停止接受模式",
-    "gui_receive_stop_server_shutdown_timeout": "停止接受模式(还剩{}秒)",
-    "gui_receive_stop_server_shutdown_timeout_tooltip": "在{}自动停止",
+    "gui_receive_stop_server_autostop_timer": "停止接受模式(还剩{}秒)",
+    "gui_receive_stop_server_autostop_timer_tooltip": "在{}自动停止",
     "gui_copy_url": "复制地址",
     "gui_copy_hidservauth": "复制HidServAuth",
     "gui_downloads": "",
@@ -104,8 +104,8 @@
     "gui_settings_button_save": "保存",
     "gui_settings_button_cancel": "取消",
     "gui_settings_button_help": "帮助",
-    "gui_settings_shutdown_timeout_checkbox": "使用自动停止计时器",
-    "gui_settings_shutdown_timeout": "停止分享时间：",
+    "gui_settings_autostop_timer_checkbox": "使用自动停止计时器",
+    "gui_settings_autostop_timer": "停止分享时间：",
     "settings_error_unknown": "无法连接Tor控制件，因为您的设置无法被理解.",
     "settings_error_automatic": "无法连接tor控制件.Tor浏览器是否在后台工作？(从torproject.org可以获得Tor Browser)",
     "settings_error_socket_port": "在socket端口{}:{}无法连接tor控制件.",
@@ -131,8 +131,8 @@
     "gui_tor_connection_error_settings": "请尝试在设置中设定OnionShare连接Tor的方式.",
     "gui_tor_connection_canceled": "无法连接Tor。\n\n请确保您一连接到网络，然后重启OnionShare并设置Tor连接。",
     "gui_tor_connection_lost": "已和Tor断开连接.",
-    "gui_server_started_after_timeout": "在服务开始之前自动停止计时器的时间已到.\n请建立新的分享.",
-    "gui_server_timeout_expired": "自动停止计时器的时间已到。\n请更新其设置来开始分享。",
+    "gui_server_started_after_autostop_timer": "在服务开始之前自动停止计时器的时间已到.\n请建立新的分享.",
+    "gui_server_autostop_timer_expired": "自动停止计时器的时间已到。\n请更新其设置来开始分享。",
     "share_via_onionshare": "用OnionShare来分享",
     "gui_use_legacy_v2_onions_checkbox": "使用旧的地址",
     "gui_save_private_key_checkbox": "使用长期地址",
@@ -207,9 +207,9 @@
     "gui_all_modes_progress_starting": "{0:s}, %p% (计算中)",
     "gui_all_modes_progress_eta": "{0:s}, 预计完成时间: {1:s}, %p%",
     "gui_share_mode_no_files": "还没有文件发出",
-    "gui_share_mode_timeout_waiting": "等待结束发送",
+    "gui_share_mode_autostop_timer_waiting": "等待结束发送",
     "gui_receive_mode_no_files": "还没有接收文件",
-    "gui_receive_mode_timeout_waiting": "等待接收完成",
+    "gui_receive_mode_autostop_timer_waiting": "等待接收完成",
     "gui_settings_onion_label": "Onion设置",
     "gui_all_modes_transfer_canceled_range": "已取消 {} - {}",
     "gui_all_modes_transfer_canceled": "已取消 {}"
