--- a/share/locale/zh_Hant.json
+++ b/share/locale/zh_Hant.json
@@ -10,7 +10,7 @@
     "not_a_readable_file": "{0:s} 不是一個可讀取的檔案。",
     "no_available_port": "找不到一個可用的端口來啟動onion服務",
     "other_page_loaded": "已載入的地址",
-    "close_on_timeout": "因計數器超時，已停止",
+    "close_on_autostop_timer": "因計數器超時，已停止",
     "closing_automatically": "因傳輸完成，已停止",
     "timeout_download_still_running": "",
     "large_filesize": "警告:傳輸巨大的檔案將有可能耗時數小時以上",
@@ -37,12 +37,12 @@
     "gui_choose_items": "瀏覽",
     "gui_share_start_server": "開始分享",
     "gui_share_stop_server": "停止分享",
-    "gui_share_stop_server_shutdown_timeout": "停止分享 (剩餘{}秒)",
-    "gui_share_stop_server_shutdown_timeout_tooltip": "計數器將在{}停止",
+    "gui_share_stop_server_autostop_timer": "停止分享 (剩餘{}秒)",
+    "gui_share_stop_server_autostop_timer_tooltip": "計數器將在{}停止",
     "gui_receive_start_server": "啟動接收模式",
     "gui_receive_stop_server": "停止接收模式",
-    "gui_receive_stop_server_shutdown_timeout": "停止接收模式 (剩餘{}秒)",
-    "gui_receive_stop_server_shutdown_timeout_tooltip": "計數器將在{}停止",
+    "gui_receive_stop_server_autostop_timer": "停止接收模式 (剩餘{}秒)",
+    "gui_receive_stop_server_autostop_timer_tooltip": "計數器將在{}停止",
     "gui_copy_url": "複製地址",
     "gui_copy_hidservauth": "複製HidServAuth",
     "gui_downloads": "",
@@ -104,8 +104,8 @@
     "gui_settings_button_save": "保存",
     "gui_settings_button_cancel": "取消",
     "gui_settings_button_help": "說明",
-    "gui_settings_shutdown_timeout_checkbox": "使用自動停止計數器",
-    "gui_settings_shutdown_timeout": "在這個時間停止分享:",
+    "gui_settings_autostop_timer_checkbox": "使用自動停止計數器",
+    "gui_settings_autostop_timer": "在這個時間停止分享:",
     "settings_error_unknown": "無法連接到Tor controller因為您的設定無效。",
     "settings_error_automatic": "無法連機到Tor controller。Tor Browser(可以從torproject.org取得)是否正在背景運行?",
     "settings_error_socket_port": "無法在{}:{}連接到Tor controller。",
@@ -131,8 +131,8 @@
     "gui_tor_connection_error_settings": "試試在設定中改變OnionShare連接到Tor網路的方式。",
     "gui_tor_connection_canceled": "無法連接到Tor。\n\n請確認您已連接上網路，然後再重新開啟OnionShare並設定Tor連線。",
     "gui_tor_connection_lost": "已斷開Tor連接。",
-    "gui_server_started_after_timeout": "",
-    "gui_server_timeout_expired": "",
+    "gui_server_started_after_autostop_timer": "",
+    "gui_server_autostop_timer_expired": "",
     "share_via_onionshare": "",
     "gui_use_legacy_v2_onions_checkbox": "",
     "gui_save_private_key_checkbox": "",
