--- a/share/locale/hi.json
+++ b/share/locale/hi.json
@@ -10,12 +10,12 @@
     "not_a_readable_file": "",
     "no_available_port": "",
     "other_page_loaded": "",
-    "close_on_timeout": "",
+    "close_on_autostop_timer": "",
     "closing_automatically": "",
     "large_filesize": "",
     "help_local_only": "",
     "help_stay_open": "",
-    "help_shutdown_timeout": "",
+    "help_autostop_timer": "",
     "help_stealth": "",
     "help_receive": "",
     "help_debug": "",
@@ -29,12 +29,12 @@
     "gui_choose_items": "चुनें",
     "gui_share_start_server": "",
     "gui_share_stop_server": "",
-    "gui_share_stop_server_shutdown_timeout": "",
-    "gui_share_stop_server_shutdown_timeout_tooltip": "",
+    "gui_share_stop_server_autostop_timer": "",
+    "gui_share_stop_server_autostop_timer_tooltip": "",
     "gui_receive_start_server": "",
     "gui_receive_stop_server": "",
-    "gui_receive_stop_server_shutdown_timeout": "",
-    "gui_receive_stop_server_shutdown_timeout_tooltip": "",
+    "gui_receive_stop_server_autostop_timer": "",
+    "gui_receive_stop_server_autostop_timer_tooltip": "",
     "gui_copy_url": "",
     "gui_copy_hidservauth": "",
     "gui_canceled": "Canceled",
@@ -92,8 +92,8 @@
     "gui_settings_button_save": "सहेजें",
     "gui_settings_button_cancel": "रद्द करे",
     "gui_settings_button_help": "मदद",
-    "gui_settings_shutdown_timeout_checkbox": "",
-    "gui_settings_shutdown_timeout": "",
+    "gui_settings_autostop_timer_checkbox": "",
+    "gui_settings_autostop_timer": "",
     "settings_error_unknown": "",
     "settings_error_automatic": "",
     "settings_error_socket_port": "",
@@ -119,8 +119,8 @@
     "gui_tor_connection_error_settings": "",
     "gui_tor_connection_canceled": "",
     "gui_tor_connection_lost": "",
-    "gui_server_started_after_timeout": "",
-    "gui_server_timeout_expired": "",
+    "gui_server_started_after_autostop_timer": "",
+    "gui_server_autostop_timer_expired": "",
     "share_via_onionshare": "",
     "gui_connect_to_tor_for_onion_settings": "",
     "gui_use_legacy_v2_onions_checkbox": "",
@@ -178,7 +178,7 @@
     "gui_all_modes_progress_starting": "",
     "gui_all_modes_progress_eta": "",
     "gui_share_mode_no_files": "",
-    "gui_share_mode_timeout_waiting": "",
+    "gui_share_mode_autostop_timer_waiting": "",
     "gui_receive_mode_no_files": "",
-    "gui_receive_mode_timeout_waiting": ""
+    "gui_receive_mode_autostop_timer_waiting": ""
 }
