--- a/share/locale/it.json
+++ b/share/locale/it.json
@@ -28,7 +28,7 @@
     "give_this_url_receive_stealth": "Condividi questo indirizzo e la linea HideServAuth con il mittente:",
     "not_a_readable_file": "{0:s} non è un file leggibile.",
     "no_available_port": "Non è stato possibile trovare alcuna porta per avviare il servizio onion",
-    "close_on_timeout": "Arrestato per tempo scaduto",
+    "close_on_autostop_timer": "Arrestato per tempo scaduto",
     "timeout_download_still_running": "download in corso, attendere",
     "systray_menu_exit": "Termina",
     "systray_download_started_title": "Download con OnionShare avviato",
@@ -42,12 +42,12 @@
     "help_autostop_timer": "Termina la condivisione dopo alcuni secondi",
     "help_stealth": "Usa l'autorizzazione del client (avanzato)",
     "help_config": "Specifica il percorso del file di configurazione del JSON personalizzato",
-    "gui_share_stop_server_shutdown_timeout": "Arresta la condivisione ({}s rimanenti)",
-    "gui_share_stop_server_shutdown_timeout_tooltip": "Il timer si arresterà tra {}",
+    "gui_share_stop_server_autostop_timer": "Arresta la condivisione ({}s rimanenti)",
+    "gui_share_stop_server_autostop_timer_tooltip": "Il timer si arresterà tra {}",
     "gui_receive_start_server": "Inizia la ricezione",
     "gui_receive_stop_server": "Arresta la ricezione",
-    "gui_receive_stop_server_shutdown_timeout": "Interrompi la ricezione ({}s rimanenti)",
-    "gui_receive_stop_server_shutdown_timeout_tooltip": "Il timer termina tra {}",
+    "gui_receive_stop_server_autostop_timer": "Interrompi la ricezione ({}s rimanenti)",
+    "gui_receive_stop_server_autostop_timer_tooltip": "Il timer termina tra {}",
     "gui_copy_hidservauth": "Copia HidServAuth",
     "gui_no_downloads": "Ancora nessun Download",
     "gui_copied_url_title": "Indirizzo OnionShare copiato",
@@ -109,8 +109,8 @@
     "gui_settings_button_save": "Salva",
     "gui_settings_button_cancel": "Cancella",
     "gui_settings_button_help": "Aiuto",
-    "gui_settings_shutdown_timeout_checkbox": "Utilizza il timer di arresto automatico",
-    "gui_settings_shutdown_timeout": "Ferma la condivisione alle:",
+    "gui_settings_autostop_timer_checkbox": "Utilizza il timer di arresto automatico",
+    "gui_settings_autostop_timer": "Ferma la condivisione alle:",
     "settings_error_unknown": "Impossibile connettersi al controller Tor perché le tue impostazioni non hanno senso.",
     "settings_error_automatic": "Impossibile connettersi al controller Tor. Tor Browser (disponibile da torproject.org) è in esecuzione in background?",
     "settings_error_socket_port": "Impossibile connettersi al controller Tor in {}: {}.",
@@ -136,8 +136,8 @@
     "gui_tor_connection_error_settings": "Prova a modificare le impostazioni di come OnionShare si connette alla rete Tor.",
     "gui_tor_connection_canceled": "Impossibile connettersi a Tor,\n\nVerifica la connessione a Internet, dopo prova a riaprire OnionShare e configurare la connessione a Tor.",
     "gui_tor_connection_lost": "Disconnesso da Tor.",
-    "gui_server_started_after_timeout": "Il timer auto-stop si è esaurito prima dell'avvio del server.\nSi prega di fare una nuova condivisione.",
-    "gui_server_timeout_expired": "Il timer auto-stop ha già finito.\nPer favore aggiornalo per iniziare la condivisione.",
+    "gui_server_started_after_autostop_timer": "Il timer auto-stop si è esaurito prima dell'avvio del server.\nSi prega di fare una nuova condivisione.",
+    "gui_server_autostop_timer_expired": "Il timer auto-stop ha già finito.\nPer favore aggiornalo per iniziare la condivisione.",
     "share_via_onionshare": "Usa OnionShare",
     "gui_connect_to_tor_for_onion_settings": "Connetti a Tor per vedere le impostazioni del servizio onion",
     "gui_use_legacy_v2_onions_checkbox": "Usa gli indirizzi legacy",
@@ -210,7 +210,7 @@
     "gui_all_modes_progress_starting": "{0:s}, %p% (in calcolo)",
     "gui_all_modes_progress_eta": "{0:s}, ETA: {1:s}, %p%",
     "gui_share_mode_no_files": "Nessun file ancora inviato",
-    "gui_share_mode_timeout_waiting": "In attesa di finire l'invio",
+    "gui_share_mode_autostop_timer_waiting": "In attesa di finire l'invio",
     "gui_receive_mode_no_files": "Nessun file ricevuto ancora",
-    "gui_receive_mode_timeout_waiting": "In attesa di finire la ricezione"
+    "gui_receive_mode_autostop_timer_waiting": "In attesa di finire la ricezione"
 }
