--- a/share/locale/ko.json
+++ b/share/locale/ko.json
@@ -10,7 +10,7 @@
     "not_a_readable_file": "{0:s} 는 읽을수 없는 파일입니다.",
     "no_available_port": "어니언 서비스를 시작하기 위한 사용 가능한 포트를 찾을수 없었습니다",
     "other_page_loaded": "주소가 로드되다",
-    "close_on_timeout": "자동멈춤 타이머가 끝났기 때문에 정지되다",
+    "close_on_autostop_timer": "자동멈춤 타이머가 끝났기 때문에 정지되다",
     "closing_automatically": "다운로드가 완료되었기 때문에 정지되다",
     "timeout_download_still_running": "다운로드가 완료되기를 기다리는 중입니다",
     "timeout_upload_still_running": "업로드가 완료되기를 기다리는 중입니다",
@@ -38,12 +38,12 @@
     "gui_choose_items": "선택",
     "gui_share_start_server": "",
     "gui_share_stop_server": "",
-    "gui_share_stop_server_shutdown_timeout": "",
-    "gui_share_stop_server_shutdown_timeout_tooltip": "",
+    "gui_share_stop_server_autostop_timer": "",
+    "gui_share_stop_server_autostop_timer_tooltip": "",
     "gui_receive_start_server": "",
     "gui_receive_stop_server": "",
-    "gui_receive_stop_server_shutdown_timeout": "",
-    "gui_receive_stop_server_shutdown_timeout_tooltip": "",
+    "gui_receive_stop_server_autostop_timer": "",
+    "gui_receive_stop_server_autostop_timer_tooltip": "",
     "gui_copy_url": "",
     "gui_copy_hidservauth": "",
     "gui_downloads": "",
@@ -105,8 +105,8 @@
     "gui_settings_button_save": "저장",
     "gui_settings_button_cancel": "취소",
     "gui_settings_button_help": "도움말",
-    "gui_settings_shutdown_timeout_checkbox": "",
-    "gui_settings_shutdown_timeout": "",
+    "gui_settings_autostop_timer_checkbox": "",
+    "gui_settings_autostop_timer": "",
     "settings_error_unknown": "",
     "settings_error_automatic": "",
     "settings_error_socket_port": "",
@@ -132,8 +132,8 @@
     "gui_tor_connection_error_settings": "",
     "gui_tor_connection_canceled": "",
     "gui_tor_connection_lost": "",
-    "gui_server_started_after_timeout": "",
-    "gui_server_timeout_expired": "",
+    "gui_server_started_after_autostop_timer": "",
+    "gui_server_autostop_timer_expired": "",
     "share_via_onionshare": "",
     "gui_use_legacy_v2_onions_checkbox": "",
     "gui_save_private_key_checkbox": "",
