--- a/share/locale/no.json
+++ b/share/locale/no.json
@@ -11,7 +11,7 @@
     "give_this_url_receive_stealth": "Gi denne adressen og HidServAuth-linjen til avsenderen:",
     "not_a_readable_file": "{0:s} er ikke en lesbar fil.",
     "no_available_port": "Fant ikke tilgjengelig port for oppstart av løktjenesten",
-    "close_on_timeout": "Stoppet fordi tidsavbruddsuret gikk ut",
+    "close_on_autostop_timer": "Stoppet fordi tidsavbruddsuret gikk ut",
     "closing_automatically": "Stoppet fordi nedlasting fullførtes",
     "timeout_download_still_running": "Venter på at nedlastingen skal fullføres",
     "large_filesize": "Advarsel: forsendelse av stor deling kan ta timer",
@@ -38,12 +38,12 @@
     "gui_choose_items": "Velg",
     "gui_share_start_server": "Start deling",
     "gui_share_stop_server": "Stopp deling",
-    "gui_share_stop_server_shutdown_timeout": "Stopp deling ({}s gjenstår)",
-    "gui_share_stop_server_shutdown_timeout_tooltip": "Tidsavbruddsuret går ut {}",
+    "gui_share_stop_server_autostop_timer": "Stopp deling ({}s gjenstår)",
+    "gui_share_stop_server_autostop_timer_tooltip": "Tidsavbruddsuret går ut {}",
     "gui_receive_start_server": "Start mottaksmodus",
     "gui_receive_stop_server": "Stopp mottaksmodus",
-    "gui_receive_stop_server_shutdown_timeout": "Stopp mottaksmodus ({}s gjenstår)",
-    "gui_receive_stop_server_shutdown_timeout_tooltip": "Tidsavbruddsuret går ut {}",
+    "gui_receive_stop_server_autostop_timer": "Stopp mottaksmodus ({}s gjenstår)",
+    "gui_receive_stop_server_autostop_timer_tooltip": "Tidsavbruddsuret går ut {}",
     "gui_copy_url": "Kopier nettadresse",
     "gui_copy_hidservauth": "Kopier HidServAuth",
     "gui_downloads": "Nedlastingshistorikk",
@@ -104,8 +104,8 @@
     "gui_settings_button_save": "Lagre",
     "gui_settings_button_cancel": "Avbryt",
     "gui_settings_button_help": "Hjelp",
-    "gui_settings_shutdown_timeout_checkbox": "Bruk tidsavbruddsur",
-    "gui_settings_shutdown_timeout": "Stopp deling ved:",
+    "gui_settings_autostop_timer_checkbox": "Bruk tidsavbruddsur",
+    "gui_settings_autostop_timer": "Stopp deling ved:",
     "settings_saved": "Innstillinger lagret i {}",
     "settings_error_unknown": "Kan ikke koble til Tor-kontroller fordi innstillingene dine ikke gir mening.",
     "settings_error_automatic": "Kunne ikke koble til Tor-kontrolleren. Kjører Tor-nettleseren (tilgjengelig fra torproject.org) i bakgrunnen?",
@@ -132,8 +132,8 @@
     "gui_tor_connection_error_settings": "Prøv å endre hvordan OnionShare kobler til Tor-nettverket i innstillingene.",
     "gui_tor_connection_canceled": "Kunne ikke koble til Tor.\n\nForsikre deg om at du er koblet til Internett, åpne så OnionShare igjen, og sett opp dets tilkobling til Tor.",
     "gui_tor_connection_lost": "Frakoblet fra Tor.",
-    "gui_server_started_after_timeout": "Tidsavbruddsuret gikk ut før tjeneren startet.\nLag en ny deling.",
-    "gui_server_timeout_expired": "Tidsavbruddsuret har gått ut allerede.\nOppdater det for å starte deling.",
+    "gui_server_started_after_autostop_timer": "Tidsavbruddsuret gikk ut før tjeneren startet.\nLag en ny deling.",
+    "gui_server_autostop_timer_expired": "Tidsavbruddsuret har gått ut allerede.\nOppdater det for å starte deling.",
     "share_via_onionshare": "OnionShare det",
     "gui_use_legacy_v2_onions_checkbox": "Bruk gammeldagse adresser",
     "gui_save_private_key_checkbox": "Bruk en vedvarende adresse",
@@ -212,9 +212,9 @@
     "gui_all_modes_progress_starting": "{0:s}, %p% (kalkulerer)",
     "gui_all_modes_progress_eta": "{0:s}, ETA: {1:s}, %p%",
     "gui_share_mode_no_files": "Ingen filer sendt enda",
-    "gui_share_mode_timeout_waiting": "Venter på fullføring av forsendelse",
+    "gui_share_mode_autostop_timer_waiting": "Venter på fullføring av forsendelse",
     "gui_receive_mode_no_files": "Ingen filer mottatt enda",
-    "gui_receive_mode_timeout_waiting": "Venter på fullføring av mottak",
+    "gui_receive_mode_autostop_timer_waiting": "Venter på fullføring av mottak",
     "gui_all_modes_transfer_canceled_range": "Avbrutt {} - {}",
     "gui_all_modes_transfer_canceled": "Avbrutt {}",
     "gui_settings_onion_label": "Løk-innstillinger"
